--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -56,6 +56,8 @@ body
 		overflow: auto
 	+iphone
 		overflow: auto
+	&.simple
+		overflow: auto
 a
 	text-decoration: none
 
@@ -122,6 +124,7 @@ a
 	background: rgba(0,0,0,.58) 
 	+tr(height .2s linear)
 	overflow: hidden
+	 
 .logo
 	position: absolute
 	top: 17px
@@ -285,6 +288,8 @@ a
 	+transition(left .2s linear,background .6s linear)
 	+transition-delay(.2s)
 	z-index: 4 
+	.simple &
+		top: 0
 	li
 		margin-top: 20px
 		&:first-child
@@ -306,6 +311,8 @@ a
 	+tr(width .2s linear) 
 	overflow: hidden
 	z-index: 4 
+	.simple &
+		top: 0
 .page__content-in
 	position: absolute
 	top: 50px
@@ -415,7 +422,17 @@ a
 			border-color: #857e6b
 
 
-
+.fotogal
+	position: absolute
+	top: 100px 
+	right: 100px 
+	left: 300px 
+	bottom: 100px 
+	z-index: 90  
+#slide3 
+	background: #000 
+	.page__bg
+		opacity: .1  
 
 
 
