--- a/css/screen.css
+++ b/css/screen.css
@@ -144,7 +144,8 @@ a { text-decoration: none; }
 .copyright a { border-bottom: 1px dotted transparent; font-family: "Roboto", Arial, sans-serif; text-transform: uppercase; font-size: 10px; color: #857e6b; -webkit-transition: border-color 0.2s linear; -moz-transition: border-color 0.2s linear; -o-transition: border-color 0.2s linear; transition: border-color 0.2s linear; }
 .copyright a:hover { border-color: #857e6b; }
 
-.fotogal { position: absolute; top: 100px; right: 100px; left: 300px; bottom: 100px; z-index: 90; }
+.fotogal { position: absolute; top: 200px; right: 100px; left: 300px; bottom: 100px; z-index: 90; }
+.simple .fotogal { top: 100px; }
 
 #slide3 { background: black; }
 #slide3 .page__bg { opacity: 0.1; }
