--- a/sass/_common.sass
+++ b/sass/_common.sass
@@ -424,11 +424,13 @@ a
 
 .fotogal
 	position: absolute
-	top: 100px 
+	top: 200px 
 	right: 100px 
 	left: 300px 
 	bottom: 100px 
 	z-index: 90  
+	.simple &
+		top: 100px 
 #slide3 
 	background: #000 
 	.page__bg
